Fix wrong background scaling of Player-Info-UI

--- a/Webpage/Css/game.css
+++ b/Webpage/Css/game.css
@@ -42,12 +42,11 @@ p {
 .player-stats {
     background-size: 20vw;
     padding: 2vh 2vw;
-    border-radius: 0;
     display: flex;
     align-items: center;
     background-image: url('../images/Game_Textures/UI/Info-Background-v1.png');
     background-repeat: no-repeat;
-    background-position: 1.5vw 0.5vw;
+    background-position: 100%;
 }
 
 .player-image-container {
@@ -55,8 +54,8 @@ p {
 }
   
 .player-image {
-    width:  6.5vw;
-    height: 6.5vw;
+    width:  6.6vw;
+    height: 6.6vw;
     image-rendering: pixelated;
 }
   
